--- a/RAG_Enabled_chatbot_for_interview_preparation.ipynb
+++ b/RAG_Enabled_chatbot_for_interview_preparation.ipynb
@@ -413,10 +413,10 @@
       },
       "outputs": [],
       "source": [
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
-        "os.environ[\"NEO4J_URI\"] = \"neo4j+s://7ce867a3.databases.neo4j.io\"\n",
-        "os.environ[\"NEO4J_USERNAME\"] = \"neo4j\"\n",
-        "os.environ[\"NEO4J_PASSWORD\"] = \"8aoTqHQ_CrrqF6SefJBxHEZmKuMMW_xhD4Ewwz_Dre8\"\n"
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-....\"\n",
+        "os.environ[\"NEO4J_URI\"] = \"bolt+s://d......databases.neo4j.io:7687\"\n",
+        "os.environ[\"NEO4J_USERNAME\"] = \"usr\"\n",
+        "os.environ[\"NEO4J_PASSWORD\"] = \"pwd\"\n"
       ]
     },
     {
@@ -1549,10 +1549,10 @@
         "except:\n",
         "  pass\n",
         "\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
-        "os.environ[\"NEO4J_URI\"] = \"neo4j+s://7ce867a3.databases.neo4j.io\"\n",
-        "os.environ[\"NEO4J_USERNAME\"] = \"neo4j\"\n",
-        "os.environ[\"NEO4J_PASSWORD\"] = \"8aoTqHQ_CrrqF6SefJBxHEZmKuMMW_xhD4Ewwz_Dre8\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-....\"\n",
+        "os.environ[\"NEO4J_URI\"] = \"bolt+s://d......databases.neo4j.io:7687\"\n",
+        "os.environ[\"NEO4J_USERNAME\"] = \"usr\"\n",
+        "os.environ[\"NEO4J_PASSWORD\"] = \"pwd\"\n",
         "\n",
         "\n",
         "_search_query = RunnableLambda(lambda x : x[\"question\"])\n",
